...
            "state": "translated",
            "value": "Добавить время"
          }
        }
      }
    },
    "Add to collection": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add to collection"
          }
...
            "state": "translated",
            "value": "Создать оформление"
          }
        }
      }
    },
    "Create and add": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Create and add"
          }
...
            "value": "Done"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Готово"
          }
        }
      }
    },
    "Duplicates in file": {
      "localizations": {
...
            "state": "translated",
            "value": "Редактор оформления"
          }
        }
      }
    },
    "Enable notifications": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Enable notifications"
          }
...
            "value": "Import files"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Импорт файлов"
          }
        }
      }
    },
    "Import options": {
      "localizations": {
...
            "state": "translated",
            "value": "Моноширинный"
          }
        }
      }
    },
    "More actions": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "More actions"
          }
...
            "state": "translated",
            "value": "Скрытые слова и фразы"
          }
        }
      }
    },
    "My Content": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "My Content"
          }
...
            "state": "translated",
            "value": "Зависимость от сети"
          }
        }
      }
    },
    "New collection name": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New collection name"
          }
...
            "state": "translated",
            "value": "Скруглённый"
          }
        }
      }
    },
    "Save": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save"
          }
...
            "state": "translated",
            "value": "Настройка в «Командах»"
          }
        }
      }
    },
    "Share image": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share image"
          }
...
            "state": "translated",
            "value": "Название оформления"
          }
        }
      }
    },
    "Themes": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Themes"
          }
...
            "state": "translated",
            "value": "Повторить"
          }
        }
      }
    },
    "Try original sample thoughts": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Try original sample thoughts"
          }
...
            "state": "translated",
            "value": "Попробовать примеры LERN"
          }
        }
      }
    },
    "Type of Content": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Type of Content"
          }
...
            "state": "translated",
            "value": "Слово или фраза"
          }
        }
      }
    },
    "Write a thought": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Write a thought"
          }
...
            "value": "Your library"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Ваша библиотека"
          }
        }
      }
    },
    "Your space": {
      "localizations": {
...
            "state": "translated",
            "value": "Профиль"
          }
        }
      }
    },
    "Remove favorite": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Remove favorite"
          }
...
            "state": "translated",
            "value": "Изменить мысль"
          }
        }
      }
    },
    "Reminder group": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reminder group"
          }
...
            "state": "translated",
            "value": "Бумага"
          }
        }
      }
    },
    "Import a file or write a thought to begin.": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Import a file or write a thought to begin."
          }
...
            "state": "translated",
            "value": "Перемешивание"
          }
        }
      }
    },
    "Share": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share"
          }
...
